# crop_modelling

./: Makefile  README.md  pyproject.toml  requirements.txt
crop_modelling/: __init__.py  dataset.py  features.py  plots.py
crop_modelling/modeling/: predict.py  train.py
notebooks/: test.ipynb
notebooks/01_data_engineering/: area_data.ipynb  area_engineering.ipynb  delivery_engineering.ipynb  production_engineering.ipynb
notebooks/02_eda/: yc_industry_analysis.ipynb  yc_refactor.ipynb  yield_consistency_eda.ipynb
notebooks/03_feature_engineering/area/: soya_area.ipynb  soya_area_parms.py  sunflower_area.ipynb  sunflower_area_parms.py  white_maize_area.ipynb  white_maize_area_parms.py  yellow_maize_area.ipynb  yellow_maize_area_parms.py
notebooks/03_feature_engineering/delivery/: soya_delivery.ipynb  soya_delivery_parms.py  sunflower_delivery.ipynb  sunflower_delivery_parms.py  white_maize_delivery.ipynb  white_maize_delivery_parms.py  yellow_maize_delivery.ipynb  yellow_maize_delivery_parms.py
notebooks/03_feature_engineering/production/: soya_production.ipynb  soya_production_parms.py  sunflower_production.ipynb  sunflower_production_parms.py  white_maize_production.ipynb  white_maize_production_parms.py  yellow_maize_production.ipynb  yellow_maize_production_parms.py
src/: anomaly.py  io_data_model.py  plotting.py  schema.py  time_series.py  transformation.py
