[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crop_modelling"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mario Ervedosa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["crop_modelling"]
force_sort_within_sections = true


[tool.poetry.dependencies]
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"
numpy = "^2.3.1"
pandas = "^2.3.1"
polars = "^1.31.0"
pyarrow = "^21.0.0"
ipywidgets = "^8.1.7"
nbconvert = "^7.16.6"
pandera = "^0.25.0"
duckdb = "^1.3.2"
duckdb-engine = "^0.17.0"
skimpy = "^0.0.18"
scipy = "^1.16.0"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
xgboost = "^3.0.2"
lightgbm = "^4.6.0"
catboost = "^1.2.8"
lime = "^0.2.0.1"
tqdm = "^4.67.1"
loguru = "^0.7.3"
dotenv = "^0.9.9"
typer = "^0.16.0"
ipykernel = "^6.29.5"
papermill = "^2.6.0"
ipython = "^9.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
nbqa = "^1.9.1"

